# sse-starlette

./: .bumpversion.cfg  .confguard  .envrc  .gitignore  .pdm-python  .pre-commit-config.yaml  .run  .workmux.yaml  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  Dockerfile  Makefile  Manifest.in  Pipfile  README.md  SIGNAL_HANDLER.md  context_propagation_scratch.md  coverage.xml  example.py  example_fastapi.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  load-test.yml  release.yml
.run/: example.run.xml  example_fastapi.run.xml
.specify/memory/: constitution.md
changelog.d/: 20230208_185352_sysid.md
examples/: 01_basic_sse.py  02_broadcasting.py  02_message_broadcasting.py  03_database_streaming.py  04_advanced_features.py  05_memory_channels.py  06_send_timeout.py  07_cooperative_shutdown.py  README.md  comment_as_ping.html  comment_as_ping.py  custom_generator.py  demo_client.html  error_handling.html  error_handling.py  example.db  example.py  example_fastapi.py  example_fastapi_sqlalchemy.py  load_test.py  many_clients.sh  no_async_generators.py  stream_generator.py  stream_generator_multiple.py
examples/demonstrations/: README.md  conftest.py
examples/demonstrations/advanced_patterns/: custom_protocols.py  error_recovery.py  memory_channels.py
examples/demonstrations/basic_patterns/: client_disconnect.py  graceful_shutdown.py
examples/demonstrations/production_scenarios/: load_simulations.py  network_interruption.py
examples/issues/: issue132.py  issue132_fix.py  issue152.py  issue77.py  no_async_generators.py
scripts/: gc-reproduce.py  lint  publish  test
specs/001-cleanup-examples/: plan.md  research.md  spec.md  tasks.md
specs/001-cleanup-examples/checklists/: requirements.md
sse_starlette/: __init__.py  _utils.py  appstatus.py  event.py  helper.py  sse.py  sse2.py  sse3.py
tests/: Dockerfile.loadtest  REPRODUCE_ISSUE142.md  anyio_compat.py  conditional_yielding_endpoint.py  conftest.py  integration_testing.http  reproduce_issue142_observation1.py  reproduce_issue142_observation2.py  test_appstatus.py  test_event.py  test_event_source_response.py  test_gc_behavior.py  test_issue132.py  test_issue142_reassessment.py  test_issue152.py  test_issue164.py  test_issue167.py  test_memory_leak.py  test_multi_loop.py  test_partial_vs_lambda.py  test_sse.py  test_streaming_parity.py  test_tracemalloc_behavior.py
tests/experimentation/: container.py  issue164.py  test_multiple_consumers_asyncio.py  test_multiple_consumers_threads.py
tests/experimentation/issue164/: index.html  issue164.py  issue164_native.py
tests/integration/: README.md  frozen_client.py  integration_testing.http  main_endless.py  main_endless_conditional.py  test_conditional_yielding_endpoint.py  test_multiple_consumers.py  test_xxx.py
tests/load/: README.md  __init__.py  baseline.py  conftest.py  metrics.py  reporter.py  server_app.py  test_backpressure.py  test_memory_stability.py  test_shutdown.py  test_throughput.py  test_watcher_scale.py
