[metadata]
name = sse-starlette
version = 0.8.1
description = "SSE plugin for Starlette"
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = sysid
author_email = sysid@gmx.de
url = https://github.com/sysid/sse-starlette
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    starlette
include_package_data = True
python_requires = >=3.6

[options.packages.find]
;where = snipsync  ; gotcha: was not importable as snipsync

[options.package_data]
sse_starlette = "py.typed"
