[metadata]
name = sse-starlette
version = 1.3.4
description = "SSE plugin for Starlette"
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = sysid
author_email = sysid@gmx.de
url = https://github.com/sysid/sse-starlette
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
	starlette
include_package_data = True
python_requires = >=3.8

[options.package_data]
sse_starlette = "./sse_starlette/py.typed"

[isort]
profile = black
src_paths = isort,test
skip = .gitignore,.dockerignore,.tox,.venv,build,dist

[flake8]
max-complexity = 10
max-line-length = 88
ignore =
	E203  ; whitespace before ‘:’ (black)
	F541  ; f-string is missing placeholders
	B008  ; Do not perform function calls in argument defaults.
	E501  ; line too long (will be taken care of by black)
	ASS001 ; do not use bare asserts
exclude =
	.git
	__pycache__
	.venv
	.eggs
	*.egg
	dist

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
exclude = (tests,)
ignore_missing_imports = True
follow_imports = silent
no_implicit_optional = True

[mypy-gldpm.tests]
disallow_untyped_defs = True

[coverage:run]
omit = tests/*,**/__main__.py,**/.venv/*,**/site-packages/*,examples/*
branch = True

[coverage:report]
show_missing = True
skip_covered = True
fail_under = 75

[tool:pytest]
markers =
	integtest: mark a test as a integration-test.
# https://github.com/pytest-dev/pytest-asyncio#modes
asyncio_mode = auto

[tool.scriv]
format = md
version = literal: sse_starlette/__init__.py: __version__
